--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=findmypet;User Id=sa;Password=Beew1234;"
+    "DefaultConnection": "Server=localhost;Database=findmypet;User Id=sa;Password=Sqlpassword123!;"
   },
   "Logging": {
     "LogLevel": {
