--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "find-my-pet",
+  "name": "findmypet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "easyqrcodejs": "^3.5.2",
+    "easyqrcodejs": "^3.5.4",
     "gsap": "^3.2.6",
     "vue": "^2.6.11",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
